<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carbon" >
    
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="18dp"
        android:text="@string/add_task"
        android:layout_marginBottom="15sp"
        android:background="@drawable/button"/>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sort_spinner"
        android:divider="@android:color/transparent"
        android:dividerHeight="15.0sp" >

    </ListView>

    <TextView
        android:id="@+id/sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_button"
        android:text="@string/sort"
        android:textColor="#000000"
        android:typeface="serif"
        android:textSize="22sp"
        android:textStyle="italic"/>

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_button"
        android:layout_toRightOf="@+id/sort"
        android:clickable="true"
        android:entries="@array/sorts_options"
        android:prompt="@string/prompt" />

</RelativeLayout>
